<resources>
    <string name="app_name">MoviesAndroidAcademy</string>
    <string name="background">background</string>
    <string name="_13">13+</string>
    <string name="back">Back</string>
    <string name="row">row</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="action_adventure_fantasy">Action,Adventure,Fantasy</string>
    <string name="_125_reviews">125 reviews</string>
    <string name="fifth">fifth</string>
    <string name="fought">fought</string>
    <string name="third">third</string>
    <string name="second">second</string>
    <string name="first">first</string>
    <string name="storyline">Storyline</string>
    <string name="avengers_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="robertjr">RobertJr</string>
    <string name="movieslist">MoviesList</string>
    <string name="time">137 min</string>
    <string name="reviews">125 Reviews</string>
    <string name="genre">Action, Adventure, Drama</string>
    <string name="liked_films">liked films</string>
</resources>