<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#191926">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background"
        android:scaleType="fitStart"
        android:src="@drawable/_159882fd7d1a53192ba7e58f174971e"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:contentDescription="@string/row"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:text="@string/back"
        android:textColor="#7575AC"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/row"
        app:layout_constraintTop_toTopOf="@+id/row" />

    <TextView
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_13"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/name_of_film"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/avengers_end_game"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/action_adventure_fantasy"
        android:textColor="#FF3466"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/name_of_film" />

    <ImageView
        android:id="@+id/firstStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/first"
        android:src="@drawable/red_star"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <ImageView
        android:id="@+id/secondStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/second"
        android:src="@drawable/red_star"
        app:layout_constraintStart_toEndOf="@id/firstStar"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <ImageView
        android:id="@+id/thirdStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/third"
        android:src="@drawable/red_star"
        app:layout_constraintStart_toEndOf="@id/secondStar"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <ImageView

        android:id="@+id/foughtStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fought"
        android:src="@drawable/red_star"
        app:layout_constraintStart_toEndOf="@id/thirdStar"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <ImageView
        android:id="@+id/fifthStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fifth"
        android:src="@drawable/grey_star"
        app:layout_constraintStart_toEndOf="@id/foughtStar"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-4dp"
        android:text="@string/_125_reviews"
        android:textColor="#6D6D80"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/fifthStar"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reviews" />


</androidx.constraintlayout.widget.ConstraintLayout>