<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#191926">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background"
        android:scaleType="fitStart"
        android:src="@drawable/_159882fd7d1a53192ba7e58f174971e"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_arrow_back_ios_new_24"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/back"
        android:textColor="#7575AC"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_13"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/name_of_film"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/avengers_end_game"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04136253" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/action_adventure_fantasy"
        android:textColor="#FF3466"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/name_of_film" />

    <ImageView
        android:id="@+id/firstStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/first"
        android:src="@drawable/red_star"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <ImageView
        android:id="@+id/secondStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/second"
        android:src="@drawable/red_star"
        app:layout_constraintStart_toEndOf="@id/firstStar"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <ImageView
        android:id="@+id/thirdStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/third"
        android:src="@drawable/red_star"
        app:layout_constraintStart_toEndOf="@id/secondStar"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <ImageView

        android:id="@+id/foughtStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fought"
        android:src="@drawable/red_star"
        app:layout_constraintStart_toEndOf="@id/thirdStar"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <ImageView
        android:id="@+id/fifthStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fifth"
        android:src="@drawable/grey_star"
        app:layout_constraintStart_toEndOf="@id/foughtStar"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-4dp"
        android:text="@string/_125_reviews"
        android:textColor="#6D6D80"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/fifthStar"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/storyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/storyline"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/reviews" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="24dp"
        android:text="@string/avengers_description"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/storyline" />

    <TextView
        android:id="@+id/cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp"
        android:text="@string/cast"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96107054" />

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        android:id="@+id/actors_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/cast"
        tools:listitem="@layout/view_holder_actor" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actors_recyclerView"
        app:layout_constraintVertical_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>